--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -7,40 +7,27 @@ body {
 }
 
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  grid-auto-columns: 10rem 1fr;
+  grid-auto-columns: 1fr;
   background-color: #fff;
   color: #444;
 }
 
 app-header {
-  border: 1px solid black; 
-  grid-column: 2;
-  height: 5rem;
-}
-
-app-sidebar {
-  text-align: center;
-  border: 1px solid black;
   grid-column: 1;
-  grid-row: 1/-1;
-  height: 100vh;
 }
 
 app-content {
-  border: 1px solid black;
-  grid-column: 2;
+  grid-column: 1;
   grid-row: 2;
 }
 
 app-footer {
-  border: 1px solid black;
-  grid-column: 2;
+  grid-column: 1;
   grid-row: 3;
   height: 3rem;
 }
