Made styling changes, and alignment changes.

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -13,6 +13,7 @@ html {
   --rosalution-grey-200: #C4C4C4;
   --rosalution-grey-300: #A1A1A1;
   --rosalution-grey-100: #E7E6E6;
+  --rosalution-grey-50: #F6F6F6;
   --rosalution-black: black;
   --rosalution-white: white;
   
