--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -2,7 +2,8 @@
 
 html {
   --cgds-blue-100: #CED2FE; /** delphi-blue-100 within figma documentation **/
-  
+  --cgds-red-200: #FF555D; /** delphi-red-200 within figma documentation **/
+
   --rosalution-blue-200: #0066FF;
   --rosalution-green-200: #00C036;
   --rosalution-purple-100: #D9C2FF;
