Created tab to toggle between different attachment types for the modal dialog. Refactored and added styling accordingly

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -5,6 +5,8 @@ html {
   --cgds-red-200: #FF555D; /** delphi-red-200 within figma documentation **/
 
   --rosalution-blue-200: #0066FF;
+  --rosalution-blue-150: #19A3CF;
+  --rosalution-blue-100: #0BC3FF;
   --rosalution-green-200: #00C036;
   --rosalution-purple-100: #D9C2FF;
   --rosalution-purple-200: #7E64A9;
