--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -8,3 +8,35 @@ html {
   --rosalution-status-on-hold: var(--cgds-blue-100);
   --rosalution-status-declined: var(--rosalution-grey-200);
 }
+
+.rosalution-button {
+  background-color: var(--rosalution-purple-100);
+  color: var(--rosalution-purple-300);
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: 700;
+  font-size: 1.125rem;
+  height: 1.75rem;
+  width: 7rem;
+  border: none;
+  border-radius: 1.563rem;
+  cursor: pointer;
+}
+
+.rosalution-button:hover {
+  background-color: var(--rosalution-purple-200);
+}
+
+.rosalution-input {
+  text-align: center;
+  font-size: 0.813rem;
+  margin-top: 1.563rem;
+  border: solid;
+  border-radius: 0.438rem;
+  border-color: var(--rosalution-grey-100);
+  width: 9.375rem;
+  height: 1.688rem;
+}
+
+.rosalution-input::placeholder {
+  color: var(--rosalution-grey-300);
+}
