Resolved console errors; Resolved modal locations;Passing events and utilizing...

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -17,6 +17,7 @@ html {
   --rosalution-grey-300: #A1A1A1;
   --rosalution-grey-100: #E7E6E6;
   --rosalution-grey-50: #F6F6F6;
+  --rosalution-grey-000: #F1F1F1;
   --rosalution-black: black;
   --rosalution-white: white;
   
