--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -18,7 +18,7 @@ html {
   height: 1.75rem;
   width: 7rem;
   border: none;
-  border-radius: 1.563rem;
+  border-radius: var(--content-border-radius);
   cursor: pointer;
 }
 
