--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -22,8 +22,40 @@ html {
   cursor: pointer;
 }
 
-.rosalution-button:hover {
+.primary-button {
+  background-color: var(--rosalution-purple-100);
+  color: var(--rosalution-purple-300);
+  font-weight: 700;
+  font-size: 1.125rem;
+  height: 1.75rem;
+  width: 7rem;
+  border: none;
+  border-radius: var(--button-border-radius);
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.rosalution-button:hover{
   background-color: var(--rosalution-purple-200);
+}
+
+
+.primary-button:hover {
+  background-color: var(--rosalution-purple-200);
+}
+
+.secondary-button {
+  background-color: var(--rosalution-white);
+  font-family: "Proxima Nova", sans-serif;
+  font-weight: 700;
+  font-size: 1.125rem;
+  height: 1.75rem;
+  width: 7rem;
+  border-color: var(--rosalution-black);
+  border-radius: var(--button-border-radius);
+  border-style: solid;
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 .rosalution-input {
