--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -170,6 +170,42 @@ app-footer {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+
+/** LIGHTBOX MARKUP **/
+
+.lightbox {
+  display: none;
+
+  /* Overlay entire screen */
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  padding: 1em;
+
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.lightbox:target {
+  display: block;
+  outline: none;
+}
+
+.lightbox span {
+  /* Full width and height */
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  /* Size and position background image */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 /** || Typography **/
 
 .title {
