--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -79,8 +79,7 @@ html {
   padding: var(--p-10);
   margin: var(--p-10);
   border-radius: var(--content-border-radius);
-  /* background-color: var(--rosalution-white); */
-  background-color: aqua;
+  background-color: var(--rosalution-white);
 }
 
 .rosalution-section-seperator {
@@ -90,7 +89,6 @@ html {
 }
 
 .rosalution-section-header {
-  /* height: 2rem; */
   display: flex;
   align-items: flex-end;
 }
@@ -106,5 +104,5 @@ html {
 }
 
 .rosalution-section-header-text {
-  margin: .125rem .125rem 0 .125rem;
+  margin: var(--p-05) var(--p-05) var(--p-0) var(--p-05);
 }
