Analysis Sections Enhancement with Migration and Additional Section Images Attachments (#103)
* wip to refactoring to supporting multiple sections in an analysis to add attachments

* wip for analysis backend integration with the adding/updating/removing

* debugging whats going on

* got it working?

* reduced the CSS footprint for the gene box component and the dom to be simpler

* wip for consolidating the css

* conslidated work that was here

* wip for refactoring the backend

* fixed frontend linting issues

* Refactoring to make the emits work, starting work on the updating section image in the backend

* Image edit update and removal working

* Replaced the component back into the sectionbox and am chaining emits from sectionimage to sectionbox to analysis view

* fixed removing an image, it now properly reacts to the image removed

* Updated the backend analysis collection attach image to use field instead of dataset to fix image attachment

* Updated the analysis image system tests, changed system-tests/e2e/attach_pedigree_image.cy.js to be attach_analysis_section_image.cy.js

* Knocked out some system tests, working on the others. I think there's a bug, need to check

* Working out some of the system tests,
they won't work until the collapsible and empty content boxes are resolved

* fixed collasping of the section boxes in annotationview and made preliminary changes to the system test for collapsing

* Work in progress to resolve CSS and remove the force render

* Fixed most of the linting for python

* Refactored to not require the force re-render for frontend images

* frontend css changes to make progress to editing  case"
git push

* System tests passing

* disabled duplicate code check

* formatted backend code with yapf

* Frontned  unit tests updated along with additional console logging on frontend removed for debugging

* Updated test_analysis_collection.py to reflect the new tests for the an

--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -72,3 +72,37 @@ html {
 .rosalution-input::placeholder {
   color: var(--rosalution-grey-300);
 }
+
+.rosalution-section-container {
+  display: flex;
+  flex-direction: column;
+  padding: var(--p-10);
+  margin: var(--p-10);
+  border-radius: var(--content-border-radius);
+  background-color: var(--rosalution-white);
+}
+
+.rosalution-section-seperator {
+  height: var(--p-05);
+  background-color: var(--rosalution-grey-100);
+  border: solid .0469rem var(--rosalution-grey-100);
+}
+
+.rosalution-section-header {
+  display: flex;
+  align-items: flex-end;
+}
+
+.rosalution-header-right-icons {
+  gap: var(--p-8);
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.rosalution-section-center {
+  flex-grow: 2;
+}
+
+.rosalution-section-header-text {
+  margin: var(--p-05) var(--p-05) var(--p-0) var(--p-05);
+}
