demonstrating continuous deployment for development devops cluster deployment

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -32,8 +32,11 @@ html {
   --rosalution-black: black;
   --rosalution-white: white;
   
-  --primary-background-color: #F3F5F9;
-  --secondary-background-color: var(--rosalution-white);
+  /* --primary-background-color: #F3F5F9; */
+  --primary-background-color: yellow;
+  /* --secondary-background-color: var(--rosalution-white); */
+  --secondary-background-color: pink;
+
   
   --content-border-radius: 10px;
   --input-border-radius: 15px;
