--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -27,8 +27,10 @@ html {
   color: var(--rosalution-purple-300);
   font-weight: 700;
   font-size: 1.125rem;
-  height: 1.75rem;
-  width: 7rem;
+  padding-top: 0.6875rem;
+  padding-bottom: 0.6875rem;
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
   border: none;
   border-radius: var(--button-border-radius);
   cursor: pointer;
@@ -49,8 +51,10 @@ html {
   font-family: "Proxima Nova", sans-serif;
   font-weight: 700;
   font-size: 1.125rem;
-  height: 1.75rem;
-  width: 7rem;
+  padding-top: 0.6875rem;
+  padding-bottom: 0.6875rem;
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
   border-color: var(--rosalution-black);
   border-radius: var(--button-border-radius);
   border-style: solid;
@@ -107,7 +111,7 @@ html {
 
 .rosalution-section-header {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .rosalution-header-right-icons {
