--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -15,8 +15,10 @@ html {
   font-family: "Proxima Nova", sans-serif;
   font-weight: 700;
   font-size: 1.125rem;
-  height: 1.75rem;
-  width: 7rem;
+  padding-top: var(--p-10);
+  padding-bottom: var(--p-10);
+  padding-left: var(--p-17);
+  padding-right: var(--p-17);
   border: none;
   border-radius: var(--content-border-radius);
   cursor: pointer;
@@ -27,10 +29,10 @@ html {
   color: var(--rosalution-purple-300);
   font-weight: 700;
   font-size: 1.125rem;
-  padding-top: 0.6875rem;
-  padding-bottom: 0.6875rem;
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
+  padding-top: var(--p-11);
+  padding-bottom: var(--p-11);
+  padding-left: var(--p-17);
+  padding-right: var(--p-17);
   border: none;
   border-radius: var(--button-border-radius);
   cursor: pointer;
@@ -51,10 +53,10 @@ html {
   font-family: "Proxima Nova", sans-serif;
   font-weight: 700;
   font-size: 1.125rem;
-  padding-top: 0.6875rem;
-  padding-bottom: 0.6875rem;
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
+  padding-top: var(--p-11);
+  padding-bottom: var(--p-11);
+  padding-left: var(--p-17);
+  padding-right: var(--p-17);
   border-color: var(--rosalution-black);
   border-radius: var(--button-border-radius);
   border-style: solid;
