--- a/frontend/src/styles/rosalution.css
+++ b/frontend/src/styles/rosalution.css
@@ -15,8 +15,10 @@ html {
   font-family: "Proxima Nova", sans-serif;
   font-weight: 700;
   font-size: 1.125rem;
-  height: 1.75rem;
-  width: 7rem;
+  padding-top: var(--p-10);
+  padding-bottom: var(--p-10);
+  padding-left: var(--p-28);
+  padding-right: var(--p-28);
   border: none;
   border-radius: var(--content-border-radius);
   cursor: pointer;
@@ -27,8 +29,10 @@ html {
   color: var(--rosalution-purple-300);
   font-weight: 700;
   font-size: 1.125rem;
-  height: 1.75rem;
-  width: 7rem;
+  padding-top: var(--p-10);
+  padding-bottom: var(--p-10);
+  padding-left: var(--p-28);
+  padding-right: var(--p-28);
   border: none;
   border-radius: var(--button-border-radius);
   cursor: pointer;
@@ -49,8 +53,10 @@ html {
   font-family: "Proxima Nova", sans-serif;
   font-weight: 700;
   font-size: 1.125rem;
-  height: 1.75rem;
-  width: 7rem;
+  padding-top: var(--p-10);
+  padding-bottom: var(--p-10);
+  padding-left: var(--p-28);
+  padding-right: var(--p-28);
   border-color: var(--rosalution-black);
   border-radius: var(--button-border-radius);
   border-style: solid;
@@ -107,7 +113,7 @@ html {
 
 .rosalution-section-header {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .rosalution-header-right-icons {
