[Feature Branch] Analysis Discussion Section - Phase 1 (#161)
* [Frontend] Create a new discussion component to be displayed in an Analysis view (#139)

* Updating the paper to include the country for each affiliation which is required for publication.

* Updated the system tests workflow to use electron (#140)

* Added a DiscussionsSection.vue in AnalysisView components, updated the analysis model to return an injected discussion object, and updating the styling of the buttons to match figma more closely

* The discussion collapse works

* Looks ready for a pull request

* Tests should be working now

* Left out the node test

* Updating CSS in a few places

* Updating the DiscussionSection values

---------

Co-authored-by: Angelina Uno-Antonison <ange.unoantonison@gmail.com>

* Created a discussions property in each of the analyses with several posts within them. Removed the temp fixture used in the frontend (#141)

* Fixed frontend unit test with AnalysisView

* fixed line too long

* Missed the updated json

* Changed formatting on the /etc/fixtures/analyses.json

* removed the etc/.certificate files

* Displaying discussion posts (#150)

* New Discussions post button, text field, and save/publish buttons

* Creating temporary discussion API mock api endpoints to test integrating them into the frontend

* Displaying posts from an analysis

* Hooked up the discussion post to the backend and return a mock discussions post. Added styling to the discussion posts

* Updated CSS to alternate discussion post colors

* Added more unit test coverage on the frontend and linted

* Added system tests and data-test attributes to go along with it

---------

Co-authored-by: Angelina Uno-Antonison <ange.unoantonison@gmail.com>

* [Frontend] Clicking the "New Discussion" button opens a field below the header line divider to enter an opinion (#151)

* New Discussions post button, text field, and save/publish buttons

*

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -51,10 +51,9 @@ html {
   --p-8: 0.5rem;
   --p-10: 0.625rem;
   --p-16: 1rem;
+  --p-28: 1.75rem;
 
   scroll-padding-top: 4rem;
-  
-
 }
 
 /** || General Styles **/
