Fixed position of checkbox. Reverted styling of input checkbox.

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -128,18 +128,22 @@ input[type=checkbox]{
   background-color: var(--rosalution-grey-100);
   border-radius: var(--checkbox-border-radius);
   border-color: var(--rosalution-purple-300);
-  transform: translateY(-0.075em);
+  border-width: 0.15rem;
+  transform: translateY(-0.2rem);
+  margin-bottom: 10px;
 }
 
 input[type=checkbox]:hover {
   background-color: var(--rosalution-purple-100);
+  outline: max(2px, 0.15rem) solid var(--rosalution-purple-300);
+  outline-offset: max(2px, 0.15rem);
 }
 
 input[type=checkbox]:checked {
   background-color: var(--rosalution-purple-200);
 }
 
-input[type="checkbox"]:checked::before {
+/* input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
 
@@ -147,12 +151,8 @@ input[type=checkbox]:checked {
   background-color: var(--rosalution-purple-300);
   clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
+*/
 
-
-input[type="checkbox"]:focus:hover {
-  outline: max(2px, 0.15em) solid var(--rosalution-purple-300);
-  outline-offset: max(2px, 0.15em);
-}
 
 
 
