Unit tests are consolidated and streamlined for components.  Still wip due to now deciding how to layout inside the individual components

--- a/frontend/src/styles/annotations.css
+++ b/frontend/src/styles/annotations.css
@@ -1,4 +1,7 @@
 /** transcript dataset-container padding: var(--p-0); **/
+html {
+  --annotation-dataset-unavailable: var(--rosalution-grey-100);
+}
 
 .dataset-container {
   /* display: flex; */
